buidBinPathC.log
22:06:52 **** Incremental Build of configuration Makefiles for project binPathC ****
make all 
Building file: ../wolfssl/aesCBC.c
Invoking: GCC C Compiler
gcc -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"wolfssl/aesCBC.d" -MT"wolfssl/aesCBC.d" -o "wolfssl/aesCBC.o" "../wolfssl/aesCBC.c"
In file included from /usr/local/include/wolfssl/wolfcrypt/types.h:34:0,
                 from /usr/local/include/wolfssl/wolfcrypt/aes.h:37,
                 from ../wolfssl/aesCBC.c:7:
/usr/local/include/wolfssl/wolfcrypt/settings.h:2258:14: warning: #warning "For timing resistance / side-channel attack prevention consider using harden options" [-Wcpp]
             #warning "For timing resistance / side-channel attack prevention consider using harden options"
              ^~~~~~~
../wolfssl/aesCBC.c:29:14: error: expected declaration specifiers or ‘...’ before ‘&’ token
wolfssl/subdir.mk:18: recipe for target 'wolfssl/aesCBC.o' failed
 wc_AesSetKey(&enc, key, sizeof(key), iv, AES_ENCRYPTION);
              ^
../wolfssl/aesCBC.c:29:20: error: expected declaration specifiers or ‘...’ before ‘key’
 wc_AesSetKey(&enc, key, sizeof(key), iv, AES_ENCRYPTION);
                    ^~~
../wolfssl/aesCBC.c:29:25: error: expected declaration specifiers or ‘...’ before ‘sizeof’
 wc_AesSetKey(&enc, key, sizeof(key), iv, AES_ENCRYPTION);
                         ^~~~~~
../wolfssl/aesCBC.c:29:38: error: expected declaration specifiers or ‘...’ before ‘iv’
 wc_AesSetKey(&enc, key, sizeof(key), iv, AES_ENCRYPTION);
                                      ^~
../wolfssl/aesCBC.c:29:42: error: expected declaration specifiers or ‘...’ before ‘AES_ENCRYPTION’
 wc_AesSetKey(&enc, key, sizeof(key), iv, AES_ENCRYPTION);
                                          ^~~~~~~~~~~~~~
../wolfssl/aesCBC.c:31:18: error: expected declaration specifiers or ‘...’ before ‘&’ token
 wc_AesCbcEncrypt(&enc, cipher, plain, sizeof(plain));
                  ^
../wolfssl/aesCBC.c:31:24: error: expected declaration specifiers or ‘...’ before ‘cipher’
 wc_AesCbcEncrypt(&enc, cipher, plain, sizeof(plain));
                        ^~~~~~
../wolfssl/aesCBC.c:31:32: error: expected declaration specifiers or ‘...’ before ‘plain’
 wc_AesCbcEncrypt(&enc, cipher, plain, sizeof(plain));
                                ^~~~~
../wolfssl/aesCBC.c:31:39: error: expected declaration specifiers or ‘...’ before ‘sizeof’
 wc_AesCbcEncrypt(&enc, cipher, plain, sizeof(plain));
                                       ^~~~~~
../wolfssl/aesCBC.c:35:1: error: unknown type name ‘cipher’
 cipher now contains the ciphertext from the plain text.
 ^~~~~~
../wolfssl/aesCBC.c:35:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘contains’
 cipher now contains the ciphertext from the plain text.
            ^~~~~~~~
../wolfssl/aesCBC.c:35:12: error: unknown type name ‘contains’
../wolfssl/aesCBC.c:43:18: error: expected declaration specifiers or ‘...’ before ‘&’ token
 wc_AesCbcDecrypt(&dec, plain, cipher, sizeof(cipher));
                  ^
../wolfssl/aesCBC.c:43:24: error: expected declaration specifiers or ‘...’ before ‘plain’
 wc_AesCbcDecrypt(&dec, plain, cipher, sizeof(cipher));
                        ^~~~~
../wolfssl/aesCBC.c:43:31: error: expected declaration specifiers or ‘...’ before ‘cipher’
 wc_AesCbcDecrypt(&dec, plain, cipher, sizeof(cipher));
                               ^~~~~~
../wolfssl/aesCBC.c:43:39: error: expected declaration specifiers or ‘...’ before ‘sizeof’
 wc_AesCbcDecrypt(&dec, plain, cipher, sizeof(cipher));
                                       ^~~~~~
../wolfssl/aesCBC.c:47:1: error: unknown type name ‘plain’
 plain now contains the original plaintext from the ciphertext.
 ^~~~~
../wolfssl/aesCBC.c:47:11: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘contains’
 plain now contains the original plaintext from the ciphertext.
           ^~~~~~~~
../wolfssl/aesCBC.c:47:11: error: unknown type name ‘contains’
make: *** [wolfssl/aesCBC.o] Error 1

22:06:54 Build Finished (took 2s.154ms)

